<resources>
    <string name="app_name">P.E.F.A</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PEFA KAYOLE B</string>
    <string name="nav_header_subtitle">pefakayole@gmail.com.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Church Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About Church</string>
    <string name="menu_order">Order of Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>