<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_church"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />

        <!-- Social Media Links -->
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube"
            android:title="YouTube" />
        <item
            android:id="@+id/nav_instagram"
            android:icon="@drawable/ic_instagram"
            android:title="Instagram" />
        <item
            android:id="@+id/nav_tiktok"
            android:icon="@drawable/ic_tiktok"
            android:title="TikTok" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="Facebook" />
        <item
            android:id="@+id/nav_whatsapp"
            android:icon="@drawable/ic_whatsapp"
            android:title="WhatsApp" />
    </group>
</menu>
